# music-manager

./: Dockerfile  pyproject.toml
config/: base_config.py  dev_config.py
src/: dependencies.py  main.py
src/adapters/search/: search_adapter.py  search_auth_adapter.py
src/dto/: spotify_dto.py  spotify_requests_dto.py
src/dto/endpoints_dto/: search_endpoints_dto.py
src/endpoints/: exception_handlers.py  search_endpoints.py
src/ports/repositories/: search_auth_repository.py  search_repository.py
